config port and start to secondaary respawn points